[gd_scene load_steps=25 format=2]

[ext_resource path="res://Object/Controller.png" type="Texture" id=1]
[ext_resource path="res://Object/Controll.png" type="Texture" id=2]
[ext_resource path="res://Object/ControllDisplays/MoveWord.png" type="Texture" id=3]
[ext_resource path="res://Object/ControllDisplays/Joystick.png" type="Texture" id=4]
[ext_resource path="res://Object/ControllDisplays/DrawStabQuiAttWord.png" type="Texture" id=5]
[ext_resource path="res://Object/ControllDisplays/UpSlashWord.png" type="Texture" id=6]
[ext_resource path="res://Object/ControllDisplays/DownSlashWord.png" type="Texture" id=7]
[ext_resource path="res://Object/ControllDisplays/KickWord.png" type="Texture" id=8]
[ext_resource path="res://Scenes/ControllDisplay.gd" type="Script" id=9]
[ext_resource path="res://Object/Buttons/W.png" type="Texture" id=10]
[ext_resource path="res://Object/Buttons/A.png" type="Texture" id=11]
[ext_resource path="res://Object/Buttons/S.png" type="Texture" id=12]
[ext_resource path="res://Object/Buttons/Down.png" type="Texture" id=13]
[ext_resource path="res://Object/Buttons/Right.png" type="Texture" id=14]
[ext_resource path="res://Object/Buttons/Left.png" type="Texture" id=15]
[ext_resource path="res://Object/Buttons/Up.png" type="Texture" id=16]
[ext_resource path="res://Object/Buttons/CTRL.png" type="Texture" id=17]
[ext_resource path="res://Object/Buttons/D.png" type="Texture" id=18]
[ext_resource path="res://Object/Buttons/Q.png" type="Texture" id=19]
[ext_resource path="res://Object/Buttons/E.png" type="Texture" id=20]
[ext_resource path="res://Object/Buttons/L2LT.png" type="Texture" id=21]
[ext_resource path="res://Object/Buttons/R2RT.png" type="Texture" id=22]

[sub_resource type="Animation" id=1]
resource_name = "FadeToNormal"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("Fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="ControllDisplay" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="TextureRect" parent="."]
margin_left = 125.0
margin_top = 15.0
margin_right = 253.0
margin_bottom = 31.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Controller" type="YSort" parent="."]

[node name="Controller" type="TextureRect" parent="Controller"]
margin_left = 136.0
margin_top = 47.0
margin_right = 200.0
margin_bottom = 111.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Rightstick" type="TextureRect" parent="Controller"]
margin_left = 466.0
margin_top = 242.0
margin_right = 530.0
margin_bottom = 306.0
texture = ExtResource( 4 )

[node name="Move" type="TextureRect" parent="Controller"]
margin_left = 2.0
margin_top = 87.0
margin_right = 66.0
margin_bottom = 103.0
texture = ExtResource( 3 )

[node name="DrawStabQuiAtt1" type="TextureRect" parent="Controller"]
margin_left = 375.0
margin_top = 256.0
margin_right = 487.0
margin_bottom = 304.0
texture = ExtResource( 5 )

[node name="DrawStabQuiAtt2" type="TextureRect" parent="Controller"]
margin_left = 526.0
margin_top = 254.0
margin_right = 638.0
margin_bottom = 302.0
texture = ExtResource( 5 )

[node name="UpSlash" type="TextureRect" parent="Controller"]
margin_left = 439.0
margin_top = 213.0
margin_right = 567.0
margin_bottom = 229.0
texture = ExtResource( 6 )

[node name="DownSlash" type="TextureRect" parent="Controller"]
margin_left = 424.0
margin_top = 321.0
margin_right = 584.0
margin_bottom = 337.0
texture = ExtResource( 7 )

[node name="Kick" type="TextureRect" parent="Controller"]
margin_left = 421.0
margin_top = 88.0
margin_right = 485.0
margin_bottom = 104.0
texture = ExtResource( 8 )

[node name="MoveLine" type="Line2D" parent="Controller"]
position = Vector2( -49, -5 )
points = PoolVector2Array( 235, 150, 190, 100, 119, 100 )
width = 5.0
default_color = Color( 0.690196, 0.690196, 0.690196, 1 )

[node name="KickLine" type="Line2D" parent="Controller"]
position = Vector2( 358, 262 )
points = PoolVector2Array( 56, -167, -21, -166, -43, -107 )
width = 5.0
default_color = Color( 0.690196, 0.690196, 0.690196, 1 )

[node name="RightstickLine" type="Line2D" parent="Controller"]
position = Vector2( 179, 131 )
points = PoolVector2Array( 303, 121, 216, 90, 135, 74 )
width = 5.0
default_color = Color( 0.690196, 0.690196, 0.690196, 1 )

[node name="L2LT" type="TextureRect" parent="."]
visible = false
margin_left = 3.0
margin_top = -6.0
margin_right = 67.0
margin_bottom = 58.0
texture = ExtResource( 21 )

[node name="R2RT" type="TextureRect" parent="."]
margin_left = 574.0
margin_top = -5.0
margin_right = 638.0
margin_bottom = 59.0
texture = ExtResource( 22 )

[node name="KeyBoard" type="YSort" parent="."]
visible = false

[node name="W" type="TextureRect" parent="KeyBoard"]
margin_left = 161.0
margin_top = 123.0
margin_right = 225.0
margin_bottom = 187.0
texture = ExtResource( 10 )

[node name="A" type="TextureRect" parent="KeyBoard"]
margin_left = 126.0
margin_top = 151.0
margin_right = 190.0
margin_bottom = 215.0
texture = ExtResource( 11 )

[node name="S" type="TextureRect" parent="KeyBoard"]
margin_left = 161.0
margin_top = 152.0
margin_right = 225.0
margin_bottom = 216.0
texture = ExtResource( 12 )

[node name="D" type="TextureRect" parent="KeyBoard"]
margin_left = 196.0
margin_top = 153.0
margin_right = 260.0
margin_bottom = 217.0
texture = ExtResource( 18 )

[node name="Up" type="TextureRect" parent="KeyBoard"]
margin_left = 461.0
margin_top = 135.0
margin_right = 525.0
margin_bottom = 199.0
texture = ExtResource( 16 )

[node name="Left" type="TextureRect" parent="KeyBoard"]
margin_left = 423.0
margin_top = 165.0
margin_right = 487.0
margin_bottom = 229.0
texture = ExtResource( 15 )

[node name="Down" type="TextureRect" parent="KeyBoard"]
margin_left = 461.0
margin_top = 165.0
margin_right = 525.0
margin_bottom = 229.0
texture = ExtResource( 13 )

[node name="Right" type="TextureRect" parent="KeyBoard"]
margin_left = 498.0
margin_top = 165.0
margin_right = 562.0
margin_bottom = 229.0
texture = ExtResource( 14 )

[node name="CTRL" type="TextureRect" parent="KeyBoard"]
margin_left = 35.0
margin_top = 267.0
margin_right = 99.0
margin_bottom = 331.0
texture = ExtResource( 17 )

[node name="Move" type="TextureRect" parent="KeyBoard"]
margin_left = 462.0
margin_top = 220.0
margin_right = 526.0
margin_bottom = 236.0
texture = ExtResource( 3 )

[node name="DrawStabQuiAtt1" type="TextureRect" parent="KeyBoard"]
margin_left = 18.0
margin_top = 154.0
margin_right = 130.0
margin_bottom = 202.0
texture = ExtResource( 5 )

[node name="DrawStabQuiAtt2" type="TextureRect" parent="KeyBoard"]
margin_left = 265.0
margin_top = 153.0
margin_right = 377.0
margin_bottom = 201.0
texture = ExtResource( 5 )

[node name="UpSlash" type="TextureRect" parent="KeyBoard"]
margin_left = 127.0
margin_top = 109.0
margin_right = 255.0
margin_bottom = 125.0
texture = ExtResource( 6 )

[node name="DownSlash" type="TextureRect" parent="KeyBoard"]
margin_left = 111.0
margin_top = 227.0
margin_right = 271.0
margin_bottom = 243.0
texture = ExtResource( 7 )

[node name="Kick" type="TextureRect" parent="KeyBoard"]
margin_left = 41.0
margin_top = 319.0
margin_right = 105.0
margin_bottom = 335.0
texture = ExtResource( 8 )

[node name="Q" type="TextureRect" parent="."]
visible = false
margin_left = 2.0
margin_top = 1.0
margin_right = 66.0
margin_bottom = 65.0
texture = ExtResource( 19 )

[node name="E" type="TextureRect" parent="."]
visible = false
margin_left = 575.0
margin_top = 2.0
margin_right = 639.0
margin_bottom = 66.0
texture = ExtResource( 20 )

[node name="ControllerText" type="RichTextLabel" parent="."]
visible = false
margin_left = 7.0
margin_top = 48.0
margin_right = 82.0
margin_bottom = 64.0
text = "Controller"

[node name="KeyboardText" type="RichTextLabel" parent="."]
margin_left = 576.0
margin_top = 48.0
margin_right = 638.0
margin_bottom = 64.0
text = "Keyboard"

[node name="Fader" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="FadeToNormal" type="AnimationPlayer" parent="."]
anims/FadeToNormal = SubResource( 1 )

[node name="FadeToBlack" type="AnimationPlayer" parent="."]
anims/FadeToBlack = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="FadeToBlack" to="." method="_on_FadeToBlack_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
